--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.5.17",
     "@react-navigation/native": "^6.1.15",
     "axios": "^1.6.7",
-    "expo": "~50.0.8",
+    "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-animated-weather": "^4.0.1",
     "react-live-clock": "^6.1.20",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-async-storage": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
