--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-animated-weather": "^4.0.1",
     "react-live-clock": "^6.1.20",
     "react-native": "0.73.4",
-    "react-native-async-storage": "^0.0.1"
+    "react-native-async-storage": "^0.0.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-picker-select": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
