--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-community/geolocation": "^3.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.17",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.7",
     "expo": "^50.0.14",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-animated-weather": "^4.0.1",
@@ -21,7 +29,12 @@
     "react-native": "0.73.4",
     "react-native-async-storage": "^0.0.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-picker-select": "^9.0.1"
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-pager-view": "^6.3.0",
+    "react-native-picker-select": "^9.0.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
