--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
