--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.7",
     "expo": "^50.0.14",
+    "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -28,12 +29,15 @@
     "react-live-clock": "^6.1.20",
     "react-native": "0.73.4",
     "react-native-async-storage": "^0.0.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-weather": "^0.2.11",
     "react-navigation": "^5.0.0",
     "react-spinners": "^0.13.8"
   },
